--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,5 +23,11 @@
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>system</scope>
+            <systemPath>${basedir}/../libs/lombok.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
