--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <spring.version>6.0.7</spring.version>
     <java.version>17</java.version>
     <annotation-api.version>2.1.1</annotation-api.version>
+    <lombok.version>1.18.26</lombok.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -40,6 +41,13 @@
         <groupId>jakarta.annotation</groupId>
         <artifactId>jakarta.annotation-api</artifactId>
         <version>${annotation-api.version}</version>
+      </dependency>
+
+      <!-- Lombok -->
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
