--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,14 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - guess-the-number-game</name>
   <url>http://maven.apache.org</url>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.7.10</version>
+    <relativePath/>
+  </parent>
+
   <modules>
     <module>core</module>
     <module>console</module>
@@ -13,58 +21,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <logback.version>1.4.6</logback.version>
-    <spring.version>6.0.7</spring.version>
     <java.version>17</java.version>
-    <annotation-api.version>2.1.1</annotation-api.version>
-    <lombok.version>1.18.26</lombok.version>
   </properties>
-  <dependencyManagement>
-    <dependencies>
-
-      <!-- Logging -->
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
-      </dependency>
-
-      <!-- Spring Context -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-
-      <!-- Jakarta Annotation  -->
-      <dependency>
-        <groupId>jakarta.annotation</groupId>
-        <artifactId>jakarta.annotation-api</artifactId>
-        <version>${annotation-api.version}</version>
-      </dependency>
-
-      <!-- Lombok -->
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-        <configuration>
-          <target>${java.version}</target>
-          <source>${java.version}</source>
-          <release>${java.version}</release>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
