--- a/console/pom.xml
+++ b/console/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.adlearn</groupId>
+        <groupId>ad.adlearn</groupId>
         <artifactId>guess-the-number-game</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -12,7 +12,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.adlearn</groupId>
+            <groupId>ad.adlearn</groupId>
             <artifactId>core</artifactId>
             <version>${project.version}</version>
         </dependency>
